<resources>
    <string name="app_name">Projeto_MeNY2020</string>

    <string name="appLogo">Logo do App</string>
    <string name="title_activity_login_cadastro">loginCadastro</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="fb_btn_login">Login com Facebook</string>
    <string name="google_btn_login">Login com Google</string>
    <string name="cadastrar_btn" translatable="false">Cadastrar</string>
    <string name="entrar_btn">Entrar</string>
    <string name="Login_Title">Login</string>
    <string name="Cadastrar_Title">Cadastre-se</string>
    <string name="Usuario_input">E-mail</string>
    <string name="Senha_Input">Senha</string>
    <string name="Nome_Input">Nome</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bem - vindo ao Tempigo! </string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Tempo agora</string>
    <string name="menu_gallery">Previsão para 16 dias</string>
    <string name="menu_slideshow">Configurações</string>

    <string name="rate_dialog_title">Avalie esse app</string>
    <string name="rate_dialog_message">Gostou do app? Por favor, poderia nos avaliar? Não demora mais de um minuto! Sua opinião é muito importante para nós!</string>
    <string name="rate_dialog_ok">Avalie agora</string>
    <string name="rate_dialog_cancel">Lembre-me depois</string>
    <string name="rate_dialog_no">Não, obrigada</string>

    <string name="home_second">Home Second</string>
    <string name="mudar_cidade">Alterar cidade</string>

    <string name="carregando_dados">Estamos carregando seus dados, por favor, aguarde!</string>

    <string name="aracaju">Aracaju</string>
    <string name="belohorizonte">Belo Horizonte</string>
    <string name="belem">Belém</string>
    <string name="boavista">Boa Vista</string>
    <string name="brasilia">Brasília</string>
    <string name="campogrande">Campo Grande</string>
    <string name="cuiaba">Cuiabá</string>
    <string name="curitiba">Curitiba</string>
    <string name="florianopolis">Florianópolis</string>
    <string name="fortaleza">Fortaleza</string>
    <string name="goiania">Goiânia</string>
    <string name="joaopessoa">João Pessoa</string>
    <string name="macapa">Macapá</string>
    <string name="maceio">Maceió</string>
    <string name="manaus">Manaus</string>
    <string name="natal">Natal</string>
    <string name="palmas">Palmas</string>
    <string name="portoalegre">Porto Alegre</string>
    <string name="portovelho">Porto Velho</string>
    <string name="recife">Recife</string>
    <string name="riobranco">Rio Branco</string>
    <string name="riodejaneiro">Rio de Janeiro</string>
    <string name="salvador">Salvador</string>
    <string name="saoluis">São Luís</string>
    <string name="saopaulo">São Paulo</string>
    <string name="teresina">Teresina</string>
    <string name="vitoria">Vitória</string>
    <string name="login_tt">Login com Twitter</string>
    <string name="login_tel">Login com Telefone</string>

    <string name="default_client_id">243290692483-ag9olj6np5fat6svfsnjivceadib0poe.apps.googleusercontent.com</string>

    <string name="facebook_app_id">533729540641325</string>
    <string name="fb_login_protocol_scheme">fb533729540641325</string>


</resources>

