<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/change_city"
        android:orderInCategory="100"
        android:title="@string/mudar_cidade"
        app:showAsAction="never">
        <menu>
            <item
            android:id="@+id/aracaju"
            android:title="@string/aracaju"/>
            <item
                android:id="@+id/belohorizonte"
                android:title="@string/belohorizonte"/>
            <item
                android:id="@+id/belem"
                android:title="@string/belem"/>
            <item
                android:id="@+id/boavista"
                android:title="@string/boavista"/>
            <item
                android:id="@+id/brasilia"
                android:title="@string/brasilia"/>
            <item
                android:id="@+id/campogrande"
                android:title="@string/campogrande"/>
            <item
                android:id="@+id/cuiaba"
                android:title="@string/cuiaba"/>
            <item
                android:id="@+id/curitiba"
                android:title="@string/curitiba"/>
            <item
                android:id="@+id/florianopolis"
                android:title="@string/florianopolis"/>
            <item
                android:id="@+id/fortaleza"
                android:title="@string/fortaleza"/>
            <item
                android:id="@+id/goiania"
                android:title="@string/goiania"/>
            <item
                android:id="@+id/joaopessoa"
                android:title="@string/joaopessoa"/>
            <item
                android:id="@+id/macapa"
                android:title="@string/macapa"/>
            <item
                android:id="@+id/maceio"
                android:title="@string/maceio"/>
            <item
                android:id="@+id/manaus"
                android:title="@string/manaus"/>
            <item
                android:id="@+id/natal"
                android:title="@string/natal"/>
            <item
                android:id="@+id/palmas"
                android:title="@string/palmas"/>
            <item
                android:id="@+id/portoalegre"
                android:title="@string/portoalegre"/>
            <item
                android:id="@+id/portovelho"
                android:title="@string/portovelho"/>
            <item
                android:id="@+id/recife"
                android:title="@string/recife"/>
            <item
                android:id="@+id/riobranco"
                android:title="@string/riobranco"/>
            <item
                android:id="@+id/riodejaneiro"
                android:title="@string/riodejaneiro"/>
            <item
                android:id="@+id/salvador"
                android:title="@string/salvador"/>
            <item
                android:id="@+id/saoluis"
                android:title="@string/saoluis"/>
            <item
                android:id="@+id/saopaulo"
                android:title="@string/saopaulo"/>
            <item
                android:id="@+id/teresina"
                android:title="@string/teresina"/>
            <item
                android:id="@+id/vitoria"
                android:title="@string/vitoria"/>
        </menu>
    </item>
</menu>
